tests/tooling/fixtures/native/recovery/positive/class_return_protocol_qualifier_alias_signature.objc3
module ClassReturnProtocolQualifierAliasSignature;

fn choose(flag: bool, when_true: Class, when_false: Class) -> Class<NSObject> {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 22, 5) + 20;
}
