tests/tooling/fixtures/native/recovery/negative/negative_module_duplicate_declaration.objc3
// Expected diagnostic code(s): O3S200.
module NegativeModuleDuplicateDeclaration;
module SecondModuleDeclaration;

fn main() -> i32 {
  return 0;
}
